--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
-# MacOS
+# Fichiers système
 .DS_Store
 
-# Build Java
-/target/
-/*.class
+# Backend Java/Maven
+/backend/target/
+*.class
+*.jar
 
-# Node
-node_modules/
-build/
+# Frontend Node/React
+/frontend/node_modules/
+/frontend/build/
+/frontend/dist/
 
-# Archives et fichiers temporaires
+# Archives
 *.zip
-srcfrontend.zip
-srcbackend.zip
+*.tar.gz
+
+# IDE
+.idea/
+*.iml
